--- a/style.css
+++ b/style.css
@@ -1,676 +1,15 @@
 /*
 Theme Name: NI Knights
 Theme URI: http://nerdignorante.com.br
-Description: Site para Nerd Ignorante
+Description: Site criado para o Nerd Ignorante 
 Author: Hilderney Zapf
 Author URI: http://nerdignorante.com.br
 Version: 1.0
 */
-
-html{
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-}       
-
-body{
-	/* padding: 0;
-	margin: 0;
-	font-size: 16px;
-	font-family: 'arial'; */
-	background: radial-gradient(rgb(58,60,69), rgb(43,44,51));
-    padding-top: 34px;
-    color: #e3e4e6;
-    /* background-repeat: no-repeat;
-    background-size: 100vw 100vh; */
+html.wp-admin{
+    background-color: #fff;
 }
-
-div#wpadminbar {
-    display: none;
+body.wp-admin{
+    background-color: #fff;
+    color: #000;
 }
-
-a, a:visited, a:hover, a:focus{
-    text-decoration: none;
-    color: inherit;
-}
-.blog a, .blog a:visited, .blog a:hover, .blog a:focus{
-    text-decoration: none;
-    color: #e3e4e6;
-}
-.archive a, .archive a:visited, .archive a:hover, .archive a:focus{
-    text-decoration: none;
-    color: #e3e4e6;
-}
-
-.home a, .home a:visited, .home a:hover, .home a:focus{
-    text-decoration: none;
-    color: #e3e4e6;
-}
-
-.page a, .page a:visited, .page a:hover, .page a:focus{
-    text-decoration: none;
-    color: #e3e4e6;
-}
-.single a, .single a:visited, .single a:hover, .single a:focus{
-    text-decoration: none;
-    color: #e3e4e6;
-}
-
-.main-wrapper{
-	margin: 0 auto;
-	max-width: 2200px;
-}
-
-.main-container{
-}
-
-.hide{
-	opacity: 0.25;
-	display: none;
-}
-
-section {
-    margin: 30px 0;
-}
-
-.cl-white{    
-    color: #FFFFFF;
-}
-.cl-black{    
-    color: #000000;
-}
-.cl-dark{    
-    color: #303044;
-}
-.cl-danger{
-    color: #DD2233;   
-}
-.cl-primary{
-    color: #4466AA;   
-}
-.cl-title{
-    color: #DDAA15;   
-}
-.cl-light{
-    color: #E3E4E6  ;
-}
-.bg-white{    
-    background-color:#FFFFFFF;
-}
-.bg-black{    
-    background-color:#000000;
-}
-.bg-dark{    
-    background-color:#303044;
-}
-.bg-danger{
-    background-color:#DD2233;   
-}
-.bg-primary{
-    background-color:#4466AA;   
-}
-.bg-title{
-    background-color:#DDAA15;   
-}
-.bg-light{
-    background-color: #E3E4E6  ;
-}
-
-
-
-/*	=====================================================
-		FEATURED HEADER 
-	===================================================== */
-
-#main-featured-content{
-    width: 100%;
-}
-
-#featured-posts {
-    width: 100%;
-}
-#header-featured-col-left{
-	width: 728px;
-	float: left;
-}
-#header-featured-post-bot-left{
-	width: 364px;
-	height: 200px;
-	float: left;
-}
-#header-featured-post-bot-right{
-	width: 364px;
-	height: 200px;
-	float: right;
-}
-#header-featured-col-right{
-	width: 412px;
-	float: right;
-}
-#header-featured-post-right-main{
-	width: 412px;
-	height: 290px;
-	float: right;
-}
-
-
-
-/*	=====================================================
-		SIDEBAR 
-	===================================================== */
-#main-sidebar{
-	float: right;
-	width: 412px;
-	height: auto;
-}
-#sidebar aside {
-    background: rgba(0,0,0,0.10);
-    margin: 30px 0;
-    border-radius: 5px;
-    overflow: hidden;
-    box-shadow: -1px 1px 10px -1px rgba(0, 0, 0, 0.35);
-}
-#sidebar aside:first-child{
-	margin-top: 0;
-}
-#sidebar aside:last-child{
-	margin-bottom: 0;
-}
-#sidebar .widget {
-    padding-bottom: 20px;
-}
-#sidebar .widget-title {
-    width: 100%;
-    height: 40px;
-    font-size: 1.2em;
-    padding: 5px;
-    text-align: center;
-    background: linear-gradient(rgba(0, 0, 0, 0.25), transparent);
-    color: #FAAF0F;
-    font-weight: 500;
-}
-#sidebar .widget-title a{
-    color: #FAAF0F;
-}
-#sidebar ul ul, #sidebar ol ol{
-	padding: 0;
-    margin: 0;
-}
-ul, ul li, ol, ol li{
-	list-style: none;
-}
-
-ul li, ol li {
-    /* background-color: red; */
-    margin: 5px 0;
-    padding: 0 20px;
-}
-
-
-
-/*  =====================================================
-        HEADER
-    ===================================================== */
-
-.brand-holder {
-    height: 50px;
-    width: auto;
-}
-
-#site-brand {
-    height: 72px;
-    width: 72px;
-    position: relative;
-    top: -10px;
-}
-
-.navbar-nav {
-    font-size: 20px;
-}
-
-.navbar-nav ul li{
-    padding: 0;
-}
-
-.navbar-nav a.nav-link{
-    padding: 0;
-}
-
-
-/*  =====================================================
-        MAIN CONTENT 
-    ===================================================== */
-
-#main-content{
-    float: left;
-    width: 728px;
-    min-height: 200px;
-}
-
-
-/*	=====================================================
-		FOOTER
-	===================================================== */
-footer{
-	background-color: darkgray;
-    min-height: 300px;
-    position: ;
-    top: 0;
-    right: 0;
-    left: 0;
-    z-index: 1030;
-}
-
-
-
-/*	=====================================================
-		POSTS
-	===================================================== */
-.post {
-    border-radius: 5px;
-    overflow: hidden;
-    background: rgba(0,0,0,0.10);
-    min-height: 200px;
-    width: 100%;
-    margin: 15px 0 30px 0;
-    box-shadow: -1px 1px 10px -1px rgba(0, 0, 0, 0.35);
-}
-
-.post:first-child {
-    display: block;
-    margin-top: 0;
-}
-.post a {
-    min-height: 200px;
-}
-
-.post p {
-    /* display:none; */
-}
-
-.post-title {
-    overflow: hidden;
-    display: block;
-    max-height: 145px;
-    width: 100%;
-    padding: 15px;
-    font-size: 1.3rem;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-weight:500;
-    color: #ffffff;
-    text-shadow: 
-        -1px 1px 0px rgba(0, 0, 0, 0.7),
-        -2px 2px 2px rgba(0, 0, 0, 0.25);
-    background: linear-gradient( 
-       rgba(0, 0, 0, 0.5) ,
-       rgba(0, 0, 0, 0.15) ,
-       transparent
-    );
-}
-
-.post-content{
-    width: 100%;
-    padding: 5px;
-    display: block;   
-}
-.float-post-content{
-    width: inherit;
-    background-color: rgba(255,255,255,0.5);
-    padding: 15px;
-    max-height: 293px;
-    overflow: hidden;
-}
-.float-post-content p{
-    color: black;
-}
-.post-category {
-    position: relative;
-    display: block;
-    bottom: 0px;
-    width: 100%;
-    height: 30px;
-    padding: 5px 15px;
-    text-align: right;
-    font-size: 0.8em;
-    color: #495057;
-    font-weight: 700;
-    text-transform: uppercase;
-    background: -webkit-linear-gradient(left, transparent, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.75));
-    background: -o-linear-gradient(left, transparent, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.75));
-    background: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.75));;
-}
-
-.post-category, .post-category a, .post-category a:visited, .post-category a:hover {
-    text-decoration: none;
-    color: #FAAF0F;
-    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
-}
-
-.post .author {
-    display: block;
-    padding: 7.5px 30px;
-    max-width: 354px;
-    max-height: 160px;
-}
-
-.post .author-info{
-    padding: 7.5px 30px;
-    font-size: 0.8em;
-}
-
-.post .author-data {
-    display: block;
-}
-
-.post .author-image {
-    display: block;
-    width: 80px;
-    height: 80px;
-    background-size: cover;
-    border-radius: 50%;
-    box-shadow: 1px 1px 4px rgba(0,0,0,0.7);
-}
-.post .author-name {
-    color: #427FB4;
-    font-weight: 500;
-    text-transform: uppercase;
-}
-
-.post .author-twitter {
-    color: #427FB4;
-    font-weight: 500;
-    text-transform: lowercase;
-}
-
-.post .author-quote {
-    padding: 1em 0.5em;
-    line-height: 1.5em;
-    text-align: justify;
-    word-wrap: break-word;
-    max-height: 140px;
-    overflow: hidden;
-}
-
-.post .quote {
-    position: relative;
-    top: 0px;
-    width: 190px;
-    height: auto;
-    min-height: 80px;
-    max-height: 140px;
-    background-color: #dddddd;
-    border-radius: 5px;
-    box-shadow: 1px 1px 4px rgba(0,0,0,0.7);
-}
-
-.post .quote::after{
-    content: ' ';
-    position: absolute;
-    width: 0;
-    height: 0;
-    top: 20px;
-    left: -20px;
-    right: auto;
-    bottom: auto;
-    border: 12px solid;
-    border-color: transparent #dddddd #dddddd transparent;
-    box-shadow: 0px 4px 4px -3px rgba(0,0,0,0.7);
-}
-
-.post .col:first-child{
-    padding-right: 0;
-}
-.post .col:last-child{
-    padding-left: 0;
-}
-.post:first-child {
-    margin: 0;
-    background-color: red;
-}
-.post::last-child {
-    margin-bottom: 0;
-    background-color: red;
-}
-.post .post-content-wrapper{
-    overflow: hidden;
-    max-height: 320px;
-}
-.post .blog-featured-image {
-    min-height: 320px;
-    max-height: 320px;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-.post .post-content-wrapper .post-content{
-    /* background-color: #E3E4E6; */
-    max-height: 229px;
-    overflow: hidden;
-}
-.post .post-content-wrapper .post-content p{
-    display: none;
-    color: #E3E4E6;
-    padding:10px;
-    margin: 0;
-}
-.post .post-content-wrapper .post-content p:first-child{
-    display: block;
-}
-
-.post .post-content-wrapper .post-category{
-    position: absolute;
-    display: block;
-    bottom: 0px;
-    right: 15px;
-    width: 364px;
-    height: 30px;
-    text-align: right;
-    font-size: 0.8em;
-    color: #495057;
-    font-weight: 700;
-    text-transform: uppercase;
-    background: -webkit-linear-gradient(left, transparent, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.75));
-    background: -o-linear-gradient(left, transparent, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.75));
-    background: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.75));;
-    
-}
-.post-content-wrapper .post-category,
-.post-content-wrapper .post-category a,
-.post-content-wrapper .post-category a:visited,
-.post-content-wrapper .post-category a:hover{
-    color: #FAAF0F;
-    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
-}
-
-
-/*  =====================================================
-        SINGLE POSTS
-    ===================================================== */
-.single-post .post-featured-image {
-    min-height: 320px;
-    max-height: 320px;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.single-post .post-header {
-    
-    margin: 0 15px;
-}
-.single-post .post-content {
-    margin: 0 15px;
-    width: auto;
-    padding: 60px 30px;
-}
-.single-post .post-content p {
-    text-align: justify;   
-}
-.single-post .post-category {
-    width: auto;
-    top: 229px;
-}
-.single-post .post-footer {
-    padding: 30px 20px;
-    
-}
-
-.single-post .author {
-    min-width: 420px;
-    max-width: 420px;
-}
-
-.single-post .author-image {
-    display: block;
-    width: 80px;
-    height: 80px;
-    background-size: cover;
-    border-radius: 50%;
-    box-shadow: 1px 1px 4px rgba(0,0,0,0.7);
-}
-
-.single-post .author-quote {
-    padding: 1em;
-    line-height: 1.5em;
-    text-align: justify;
-    word-wrap: break-word;
-    max-height: 140px;
-    overflow: hidden;
-}
-
-.single-post .quote {
-    position: relative;
-    top: 0px;
-    width: 250px;
-    height: auto;
-    border-radius: 5px;
-    background-color: #dddddd;
-    box-shadow: 1px 1px 4px rgba(0,0,0,0.7);
-}
-
-.single-post .quote::after{
-    content: ' ';
-    position: absolute;
-    width: 0;
-    height: 0;
-    top: 20px;
-    left: -20px;
-    right: auto;
-    bottom: auto;
-    border: 12px solid;
-    border-color: transparent #dddddd #dddddd transparent;
-        box-shadow: 0px 4px 4px -3px rgba(0,0,0,0.7)
-}
-
-
-
-/*  =====================================================
-        FEATURED POSTS
-    ===================================================== */
-.featured-double-wrapper{
-    margin-top: 30px;   
-}
-.single-featured-post {
-    width: 100%;
-    min-height: 382px;
-    max-height: 382px;
-    background: background: rgba(0,0,0,0.10);
-}
-.single-featured-post a{
-    min-height: 283px;
-}
-.single-featured-image{
-	background-size: cover;
-    min-height: 382px;
-    max-height: 382px;
-    margin-bottom: -30px;
-}
-
-.single-feature-content{
-	width: 100%;
-	padding: 5px;
-}
-
-.double-featured-post {
-    width: 100%;
-    min-height: 262px;
-    max-height: 262px;
-    margin: 15px 0;
-    background: background: rgba(0,0,0,0.10);
-}
-
-.double-featured-image{
-    background-size: cover;
-    min-height: 262px;
-    max-height: 262px;
-    margin-bottom: -30px;
-}
-
-.podcast-featured-post {
-    width: 100%;
-    min-height: 262px;
-    margin: 15px 0;
-    background: rgba(0,0,0,0.10);
-}
-.podcast-featured-post:first-child {
-       margin: 15px 0;
-}
-.podcast-featured-post:last-child {
-       margin: 15px 0;
-}
-.podcast-featured-image{
-    background-size: cover;
-    min-height: inherit;
-    margin-bottom: -30px;
-}
-
-
-/*  =====================================================
-        NEWS POSTS
-    ===================================================== */
-.news-post.post{
-    width: 100%;
-    min-height: 364px;
-    height: 364px;
-    margin: 15px 0;
-    background: rgba(0,0,0,0.10);
-}
-
-.news-post a{
-    min-height: 364px;
-}
-
-.news-post .post-title{
-    font-size: 1.5em;
-}
-
-.news-post .float-post-content p{
-    display: none;
-    padding:10px;
-    margin: 0;
-}
-.news-post .float-post-content p:first-child{
-    display: block;
-}
-
-.news-featured-image{
-	background-size: cover;
-    min-height: inherit ;
-    margin-bottom: -30px;
-}
-
-
-/*  =====================================================
-        PODCAST POSTS
-    ===================================================== */
-#podcast-section a.img-link{
-    min-height: 180px;
-}
-
-
-/*  =====================================================
-        BLOG POSTS
-    ===================================================== */
-#blog-section a.img-link{
-    min-height: 180px;
-}
-
