--- a/assets/css/nik_medium.css
+++ b/assets/css/nik_medium.css
@@ -195,13 +195,16 @@
 	}
 
 	.navbar-nav ul li{
+	    padding: 0 20px;
+	}
+
+	.navbar-nav>a.nav-link{
 	    padding: 0;
 	}
 
-	.navbar-nav a.nav-link{
-	    padding: 0;
+	.navbar-collapse>.navbar-nav {
+	    padding-top: 30px;
 	}
-
 
 	/*  =====================================================
 	        MAIN CONTENT 
