--- a/assets/css/nik_stylesheet.css
+++ b/assets/css/nik_stylesheet.css
@@ -18,7 +18,7 @@ body.wp-admin{
     color: #000;
 }
 div#wpadminbar {
-    display: none;
+    display: block;
 }
 a, a:visited, a:hover, a:focus{
     text-decoration: none;
@@ -176,6 +176,14 @@ ul li, ol li {
     color: inherit;
 }
 
+.navbar ul li, .navbar ul ul li{
+    padding: 8px;
+}
+
+.navbar ul li:hover {
+    background: rgba(0,0,0,0.15);
+}
+
 
 /*  =====================================================
         MAIN CONTENT 
@@ -316,6 +324,35 @@ footer {
 .post-content-wrapper .post-category a:hover{
     color: #FAAF0F;
     text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
+}
+
+.bg-image {
+    background-position: center;
+}
+
+#nav-pagination {
+
+}
+
+
+#nav-pagination a.page-numbers, 
+#nav-pagination a.prev.page-numbers,
+#nav-pagination a.next.page-numbers,
+#nav-pagination span.page-numbers.current { 
+    background: rgba(0,0,0,0.15);
+    display: inline-block;
+    padding: 7px 18px;
+    font-weight: 500;
+    font-size: 1.3em;
+    border-radius: 5px;
+    text-align: center;
+    border: 1px solid rgba(255,255,255,0.1);
+}
+
+#nav-pagination span.page-numbers.current {
+    background: rgba(0, 0, 0, 0.35);
+    border: 1px solid rgba(255, 255, 255, 0.35);
+    color: #faaf0f
 }
 
 
